--- a/index.html
+++ b/index.html
@@ -7,6 +7,87 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<p>hey</p>
+	<header class="header">
+		<h2 class="logo">LOGO</h2>
+		<h3 class="home">HOME</h3>
+		<H3 class="nav">DISCOVERY</H3>
+		<H3 class="nav">PHOTOS</H3>
+		<H3 class="nav">CONTACT</H3>
+	</header>
+	<!-- pirveli bloki -->
+	<div>
+		<p class="blok1-1">TRENDING</p>
+		<div class="blok1">
+			<div class="box1text">
+				<img src="img/image1.png">
+				<div class="textabsolute">
+				    <h2 >Dolore magna aliqua</h2>
+			    </div>
+			</div>
+			
+			<p class="bloktext1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
+		</div>
+		<div class="blok2">
+			<div class="box2text">
+				<img src="img/img2.png">
+				<div>
+					<h2 class="box2absolute">Morbi eleifend a libero</h2>
+				</div>
+			</div>	
+			<p class="bloktext1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
+		</div>
+		<div class="blok3">
+			<div class="box3text">
+                <img src="img/img3.png">
+                <div class="box3absolute">
+                	<h2>Morbi eleifend a libero</h2>
+                </div>
+			</div>
+			<p class="bloktext1">Lorem ipsum dolor sit amet, ipsum labitur lucilius mel id, ad has appareat.</p>
+		</div>
+	</div>
+	<!-- meore bloki -->
+	<div>
+		<p class="satauri">HAPPENING NOW</p>
+		<div class="box1">
+			<img src="img/img4.png">
+			<img src="img/image.png">
+		</div>
+		<div class="box2">
+			<img class="img1" src="img/img9.png">
+			<img class="img2"src="img/img5.png">
+			<img class="img3"src="img/img6.png">
+		</div>
+	</div>
+	<!-- futeri -->
+	<footer class="footerblok">
+		<p class="footerbox1">logo</p>
+		<div class="footerbox2">
+			<p>home</p>
+			<p>discovery</p>
+			<p>photos</p>
+			<p>contact</p>
+		</div>
+		<div class="footerbox3">
+			<p>about</p>
+			<p>help</p>
+			<p>terms</p>
+			<p>guidlines</p>
+		</div>
+		<div class="footerbox4">
+			<p>testimonials</p>
+			<p>advertise</p>
+			<p>intergrations</p>
+			<p>careers</p>
+		</div>
+		<div class="footericon">
+			<img src="img/instagram.png">
+			<img src="img/twitter.png">
+			<img src="img/facebook.png">
+			<img src="img/web.png">
+		</div>
+	</footer>
+
+
 </body>
 </html>
